# backup-pro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/backup_pro/: __init__.py  __main__.py  backup_pro.py  cli.py  constants.py
src/backup_pro/common/: entity.py  singleton.py  utils.py
src/backup_pro/repository/: __init__.py  dao.py  repository.py
src/backup_pro/services/: __init__.py  archive_service.py  configuration_service.py  dto.py  package_service.py  scan_service.py
